# RAG-Chatbot-Backend

./: .gitignore  Dockerfile  README.md  env.example  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: apply_schema.py  clear_and_reindex.py  index_docs.py
src/: __init__.py  config.py  main.py
src/api/: __init__.py  chat.py  debug.py  health.py  sessions.py
src/models/: __init__.py  chat.py  document.py
src/services/: __init__.py  conversation.py  embedding.py  llm.py  rag_service.py  vector_store.py
src/utils/: __init__.py  markdown.py  sanitization.py
